--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,40 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/favicon.ico">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-  <title>ExpressJS Routing Tester</title>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-  <link rel="stylesheet" href="./styles.css" />
-  <script src="./scripts.js"></script>
-</head>
-
-<body>
-  <h1>ExpressJS Routing Tester
-    <a href="swagger" target="_blank">Open Swagger</a>
-  </h1>
-
-  <div class="container">
-    <h3>Authenticate</h3>
-    <small>Token</small>
-    <div><input id="authToken" /></div>
-    <h5>Send Request</h5>
-    <div>
-      <button onclick="testAuthenticator()">Send bad Request</button>
-      <button onclick="testAuthenticator(true)">Send actual Request</button>
-    </div>
-    <h5>Response</h5>
-    <div id="authResponse"></div>
-    <hr/>
-
-    <h3>Get Users</h3>
-    <h5>Send Request</h5>
-    <div>
-      <button onclick="testUsers()">Send unauthorized Request</button>
-      <button onclick="testUsers(true)">Send actual Request</button>
-    </div>
-    <h5>Response</h5>
-    <div id="usersResponse"></div>
-    <hr/>
-
-    <h3>Get User</h3>
-    <small>Missing query call, should fail on server and respond with 500</small>
-    <h5>Send Request</h5>
-    <div>
-      <button onclick="testUser()">Send unauthorized Request</button>
-      <button onclick="testUser(2)">Send bad API Route</button>
-      <button onclick="testUser(true)">Send actual Request</button>
-    </div>
-    <h5>Response</h5>
-    <div id="userResponse"></div>
-  </div>
-</body>
-
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
